fix header for safari on tablet

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -148,8 +148,8 @@ button.btn,
 
 
 .logo-nav {
-    background: @color-swatch7;
     position: fixed;
+    float: left;
     overflow-y: scroll;
     overflow-x: hidden;
     z-index: 9999;
@@ -157,7 +157,7 @@ button.btn,
     height: 100%;
     padding: 2em;
     text-align: left;
-    float: left;
+    background: @color-swatch7;
     &::-webkit-scrollbar {
     	width: 0 !important
     }
@@ -166,6 +166,7 @@ button.btn,
     }
     @media @tablet {
         width: 100%;
+        height: auto;
         padding: 0;
         position: relative;
         overflow: visible;
